--- a/Citadel-Project/templates/index.html
+++ b/Citadel-Project/templates/index.html
@@ -21,7 +21,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/templates/index.html">Home</a>
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
           </li>
         </ul>
         <form class="d-flex" role="search">
@@ -49,12 +49,12 @@
                 <h3 id="center">What would you like to do?</h3>
                 <div class="row d-flex justify-content-center">
                     <button button class="btn btn-primary center buttonHome">
-                    <a href="/templates/view.html" style="color: white; text-decoration-line: none;">View Portfolio</a>
+                    <a href="/results" style="color: white; text-decoration-line: none;">View Portfolio</a>
                     </button>
                 </div>
                 <div class="row d-flex justify-content-center">
                     <button button class="btn btn-primary center buttonHome">
-                        <a href="/templates/addPortfolio.html" style="color: white; text-decoration-line: none;">Add to Portfolio</a>
+                        <a href="/asset-inputs" style="color: white; text-decoration-line: none;">Add to Portfolio</a>
                         </button>
                 </div>
             </div>
