--- a/Citadel-Project/static/styles.css
+++ b/Citadel-Project/static/styles.css
@@ -2,6 +2,10 @@
     font-family: 'Roboto', sans-serif;
 }
 
+body {
+    background-image: url('/static/images/background.png')
+}
+
 h1 {
     text-align: center;
 }
@@ -58,4 +62,11 @@ h6 {
 
 .fixed-bottom#viewFoot {
     position: relative;
+}
+
+#submitButton {
+    --bs-btn-font-size: 1rem;
+     width: 150px;
+    height: 50px;
+    margin-top: 20px;
 }
