--- a/Citadel-Project/templates/addPortfolio.html
+++ b/Citadel-Project/templates/addPortfolio.html
@@ -41,7 +41,7 @@
             <input type="text" class="form-control" id="ticker1" name="ticker1" placeholder="Ticker" aria-label="Ticker Symbol">
         </div>
         <div class="col-6">
-            <label for="inputShares" class="form-labe fw-bold">Number of Shares</label>
+            <label for="inputShares" class="form-label fw-bold">Number of Shares</label>
             <input type="text" class="form-control" id="share1" name="share1" placeholder="Share Count" aria-label="Number of shares">
         </div>
     </div>
@@ -68,7 +68,7 @@
     <div class="row" style="margin-top: 20px;">
         <div class="col-6">
             <label for="inputTicker" class="form-label fw-bold">Ticker Symbol</label>
-            <input type="text" class="form-control" id="ticker4" name="ticker4" name="ticker4" placeholder="Ticker" aria-label="Ticker Symbol">
+            <input type="text" class="form-control" id="ticker4" name="ticker4" placeholder="Ticker" aria-label="Ticker Symbol">
         </div>
         <div class="col-6">
             <label for="inputShares" class="form-label fw-bold">Number of Shares</label>
@@ -86,19 +86,23 @@
         </div>
     </div>
       <!-- Submit Button -->
-      <div class="container">
+      <!-- <div class="container">
         <div class="row buttons" id="center">
             <button type="submit" class="btn btn-primary center"
             style="--bs-btn-font-size: 1rem; width: 150px; height: 50px;">
             <a href="/results" style="color: white; text-decoration-line: none;">Submit</a>
             </button>
+             -->
             <!-- Back Button -->
-            <button class="btn btn-primary center"
+            <!-- <button class="btn btn-primary center"
             style="--bs-btn-font-size: 1rem; width: 150px; height: 50px;">
             <a href="/" style="color: white; text-decoration-line: none;">Back</a>
-            </button>
+            </button> -->
             <!-- <input type="submit" /> -->
-        </div>
+        <!-- </div>
+      </div> -->
+      <div class="row d-flex justify-content-center">
+        <input id="submitButton" type="submit" class="btn btn-primary center"/>
       </div>
     </form>
   </div>
@@ -128,5 +132,25 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script>
+      $(document.ready(function() {
+        var entryCount = 1; // Counter for form entries
+
+        // "Add Entry" button event handling
+        $('#addEntry').click(function() {
+          entryCount++
+          var newEntry = '<div class="row" style="margin-top: 50px;">' + 
+        '<div class="col-6">' + 
+            <label for="inputTicker" class="form-label fw-bold">Ticker Symbol</label>
+            <input type="text" class="form-control" id="ticker1" name="ticker1" placeholder="Ticker" aria-label="Ticker Symbol">
+        </div>
+        <div class="col-6">
+            <label for="inputShares" class="form-label fw-bold">Number of Shares</label>
+            <input type="text" class="form-control" id="share1" name="share1" placeholder="Share Count" aria-label="Number of shares">
+        </div>
+    </div>'
+        }
+      }
   </body>
 </html>
