--- a/Citadel-Project/templates/view.html
+++ b/Citadel-Project/templates/view.html
@@ -32,45 +32,56 @@
     </div>
   </nav>
 
+  <!-- PyChart -->
+
+
+
+
+
+
+
+
   <!-- Cards-->
   <ul>
       {% for ticker in stocks %}
         <div class="card" id="center" style="width: 50rem;" >
             <div class="card-body">
-              <h5 class="card-title">{{ ticker.nane }}</h5>
-              <p class="card-text">{{ ticker.ticker }}</p>
+              <h5 class="card-title">{{ stocks[ticker].name }}</h5>
+              <p class="card-text">{{ stocks[ticker].ticker }}</p>
             </div>
             <ul class="list-group list-group-flush">
                 <div class="row">
                     <div class="col-6">
-                        <li class="list-group-item">Current Price: {{ticker.price}}</li>
-                        <li class="list-group-item">Shares: {{ticker.shares}}</li>
+                        <li class="list-group-item">Current Price: {{stocks[ticker].price}}</li>
+                        <li class="list-group-item">Shares: {{stocks[ticker].shares}}</li>
                         <!-- Initial Price is "current price" when user invests in a stock. After that, it will never change. -->
-                        <li class="list-group-item">Trade Price: {{ticker.day_open}}</li>    
+                        <li class="list-group-item">Trade Price: {{stocks[ticker].day_open}}</li>   
                     </div>
                     <div class="col-6">
-                        <li class="list-group-item">Day High: {{ticker.day_high}}</li>
-                        <li class="list-group-item">Day Low: {{ticker.day_low}}</li>
-                        <li class="list-group-item">Day Open: {{ticker.day_open}}</li>
+                        <li class="list-group-item">Day High: {{stocks[ticker].day_high}}</li>
+                        <li class="list-group-item">Day Low: {{stocks[ticker].day_low}}</li>
+                        <li class="list-group-item">Day Open: {{stocks[ticker].day_open}}</li>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-6">
-                        <li class="list-group-item">Previous Close Price: {{ticker.previous_close_price}} </li>
-                        <li class="list-group-item">52 Week High: {{ getattr(ticker, '52_week_high') }}</li>
+                        <li class="list-group-item">Previous Close Price: {{stocks[ticker].previous_close_price}} </li>
+                        <li class="list-group-item">52 Week High: {{ stocks[ticker]['52_week_high'] }}</li>
 
-                        <li class="list-group-item">52 Week Low: {{getattr(ticker, '52_week_low')}}</li>
+                        <li class="list-group-item">52 Week Low: {{ stocks[ticker]['52_week_low'] }}</li>
                     </div>
                     <div class="col-6">
-                        <li class="list-group-item">Volume: {{ticker.volume}}</li>
-                        <li class="list-group-item">Market Cap: {{ticker.market_cap}}</li>
-                        <li class="list-group-item">Exchange: {{ticker.exchange_short}}</li>
+                        <li class="list-group-item">Volume: {{stocks[ticker].volume}}</li>
+                        <li class="list-group-item">Market Cap: {{stocks[ticker].market_cap}}</li>
+                        <li class="list-group-item">Exchange: {{stocks[ticker].exchange_short}}</li>
                     </div>
                 </div>
             </ul>
           </div>
       {% endfor %}
       </ul>
+
+
 
 <!-- Back Button -->
       <div class="container">
