--- a/Citadel-Project/templates/chatbot.html
+++ b/Citadel-Project/templates/chatbot.html
@@ -32,38 +32,36 @@
     </div>
   </nav>
 
-  <!--container-->
+  <!--StockBot-->
   <div class="container">
         <div class="row" style="margin-top: 80px;">
             <div class="col-12">
-                <h1 id="center">Welcome to Portfolio Pro!</h1>
+                <h1 id="center">StockBot</h1>
             </div>
         </div>
         <div class="row">
-            <div class="col-12 about" id="center">
-                <h6>Portfolio Pro is a user-friendly portfolio management tool that helps you track and manage your investments effortlessly. Stay informed with real-time data, monitor stock performance, and make data-driven decisions. <br>Join today and take control of your portfolio with confidence.</h6>
+            <div class="col-12 chatBase align-bottom" id="center">
+                <!-- StockBot Answer -->
+
+                <!-- StockBot Question -->
+                    <!-- Form -->
+                        <div class="container">
+                            <form id = 'questionForm' method="POST" action="/DOTHISDOTHISDOTHISDOTHIS">
+                                <div id="questionEntries">
+                                    <div class="row" style="margin-top: 50px;">
+                                        <div class="col-6">
+                                            <input type="text" class="form-control" id="question" name="question" placeholder="Send a message." aria-label="Send a message.">
+                                        </div>
+                                        <div class="col-6">
+                                            <input id="questionSubmit" type="submit" class="btn btn-primary center"/>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
             </div>
         </div>
-        <div class="row" style="margin-top: 10px;">
-            <div class="col-12">
-                <h3 id="center">What would you like to do?</h3>
-                <div class="row d-flex justify-content-center">
-                    <button button class="btn btn-primary center buttonHome">
-                    <a href="/results" style="color: white; text-decoration-line: none;">View Portfolio</a>
-                    </button>
-                </div>
-                <div class="row d-flex justify-content-center">
-                    <button button class="btn btn-primary center buttonHome">
-                        <a href="/asset-inputs" style="color: white; text-decoration-line: none;">Add to Portfolio</a>
-                        </button>
-                </div>
-                <div class="row d-flex justify-content-center">
-                    <button button class="btn btn-primary center buttonHome">
-                        <a href="/chatbot" style="color: white; text-decoration-line: none;">Talk to StockBot</a>
-                        </button>
-                </div>
-            </div>
-        </div>
+        
 
     <!-- Footer -->
   <div class="row fixed-bottom" style="margin-top: 50px;">
