--- a/Citadel-ProjectNew/templates/about.html
+++ b/Citadel-ProjectNew/templates/about.html
@@ -9,6 +9,7 @@
 <body>
     <header>Welcome to PortfolioPro!</header>
     <main>
+        
         <section>
             <h2>About Us</h2>
             <p>Welcome to PortfolioPro, your AI-assisted stock portfolio manager. We are dedicated to helping investors make informed decisions and achieve their financial goals in the stock market.</p>
@@ -30,6 +31,13 @@
             
             <p>Whether you are a seasoned investor or just starting out, PortfolioPro is here to assist you in achieving financial success in the stock market. Join us today and experience the power of AI-driven portfolio management.</p>
           </section>
+
+          <section>
+            <h2>How to Use</h2>
+            <p> PortfolioPro maintains a user's portfolio with real-time quotes on stock prices and data. Simply add as many stocks as needed of a given company with its ticker symbol. After creating your initial portfolio, you can continue to update it as needed by clicking View Portfolio.</p>
+          </section>
+
+        
     </main>
 
     
