--- a/Citadel-ProjectNew/templates/view.html
+++ b/Citadel-ProjectNew/templates/view.html
@@ -83,34 +83,43 @@
                     <div class = "row d-flex justify-content-center">
                       <button type="button" class="btn btn-primary" id="removeEntry" data-bs-toggle="modal" data-bs-target="#delModal">Remove Shares for {{stocks[ticker].ticker}}</button>
                     </div>
-                    <div class = "modal fade" id = "delModal" tabindex="-1" role="dialog" aria-labelledby="Remove Modal Label" aria-hidden = "true">
-                      <div class="modal-dialog">
-                        <div class="modal-header">
-                          <h5 class ="modal-title fs-5" id = "delModalLabel">Remove Shares for {{ stocks[ticker].ticker }}</h5>
-                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
+                  </div>
+                </div>
+
+                <!-- Modal pop up to remove shares -->
+                <div class = "modal fade" id = "delModal" tabindex="-1" role="dialog" aria-labelledby="Remove Modal Label" aria-hidden = "true">
+                  <div class="modal-dialog modal-dialog-centered" style = "margin-left: auto; margin-right: auto;">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h5 class ="modal-title fs-5" id = "delModalLabel">Remove Shares for {{ stocks[ticker].ticker }}</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                       </div>
-                    <div class = "modal-body">
-                      <!-- REMOVE # OF SHARES FOR TICKER -->
                       <form id="removeShareForm" method="POST" action="/results">
-                        <div id="removeShares">
-                          <!-- range field for number of shares to be removed -->
-                          <label for="delSharesRange"  class="form-label">Remove Shares</label>
-                          <input type="range" class="form-range" id="delSharesRange" value="{{ stocks[ticker].shares // 2 }}" min="1" max="{{ stocks[ticker].shares }}"  oninput="this.nextElementSibling.value = this.value">
-                          <output>{{ stocks[ticker].shares // 2 }}</output>
+                        <div class = "modal-body">
+                          <!-- REMOVE # OF SHARES FOR TICKER -->
+                            <div id="removeShares">
+                              <!-- range field for number of shares to be removed -->
+                              <label for="delSharesRange"  class="form-label">Remove Shares</label>
+                              <input type="range" class="form-range" id="delSharesRange" name="removeVal" value="{{ stocks[ticker].shares // 2 }}" min="1" max="{{ stocks[ticker].shares }}"  oninput="this.nextElementSibling.value = this.value">
+                              <output>{{ stocks[ticker].shares // 2 }}</output>
+                              <label for="ticker" class="form-label">Ticker Name</label>
+                              <input type="text" class="form-control" id="ticker" name="tickerName" value="{{ stocks[ticker].ticker }}" disabled>
+                            </div>
                         </div>
-                        <!-- Remove all button -->
-                        <!-- IDFK -->
-                        <!-- Submit button -->
-                        <input id="submit"
+                        <div class = "modal-footer">
+                          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel
+                            <!-- <a href="/results" style="color: white; text-decoration-line: none;">Cancel</a> -->
+                          </button>
+                          <!-- submit button -->
+                          <button id="submitButton" type="button submit" class="btn btn-primary">Save Changes
+                            <!-- <a href="/results" style="color: white; text-decoration-line: none;">Save Changes</a> -->
+                          </button>
+                        </div>
                       </form>
-                    </div>
-                    <div class = "modal-footer">
-                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                      <button type="button" class="btn btn-primary">Save changes</button>
                     </div>
                   </div>
                 </div>
+
                 
 
             </ul>
